--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sports Predictor</h1>
+        <h1>Bz Betz Predictor</h1>
         <form method="POST">
             <label for="sheet_name">Select Sport:</label>
             <input type="text" id="sheet_name" name="sheet_name" placeholder="e.g., NBA, NCAAF, NFL" required>
